<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:background="@android:color/transparent"
                android:id="@+id/github"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/gmail"
                app:layout_constraintEnd_toStartOf="@+id/linkedin"
                app:layout_constraintStart_toEndOf="@+id/gmail"
                app:layout_constraintTop_toTopOf="@+id/gmail"
                app:srcCompat="@drawable/ic_github__1_"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/gmail"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/github"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:srcCompat="@drawable/ic_gmail"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView"
                style="@style/jazz"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_me"
                app:layout_constraintBottom_toTopOf="@+id/github"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="133dp"
                android:layout_height="133dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:srcCompat="@drawable/black_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView2"
                style="@style/fun"
                android:layout_marginTop="8dp"
                android:text="--------------- Developer ---------------"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView6"
                style="@style/fun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="----------------- Credits -----------------"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/github"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView3"
                style="@style/fun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="--------------- About App ---------------"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView4"
                style="@style/jazz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/about_bmi"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <ImageButton
                android:background="@android:color/transparent"
                android:id="@+id/linkedin"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/github"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/github"
                app:layout_constraintTop_toTopOf="@+id/github"
                app:srcCompat="@drawable/ic_linkedin"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView5"
                style="@style/jazz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/contact_me"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <TextView
                android:id="@+id/textView7"
                style="@style/jazz"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/credits"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>