<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bg"
    android:background ="#64b5f6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView4">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="48dp"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_height"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/et_height"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/et_height"
                        style="@style/fill_area"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:autofillHints="@string/enter_height_in_cm"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="@string/enter_height_in_cm"
                        android:inputType="numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextFields" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="@+id/cardView17"
                app:layout_constraintStart_toStartOf="@+id/cardView17"
                app:layout_constraintTop_toBottomOf="@+id/cardView17">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:src="@drawable/ic_weighing_machine"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/et_weight"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <EditText
                        android:id="@+id/et_weight"
                        style="@style/fill_area"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:autofillHints="@string/enter_weight_in_kg"
                        android:ems="10"
                        android:fontFamily="@font/open_sans"
                        android:hint="@string/enter_weight_in_kg"
                        android:inputType="numberDecimal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextFields" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/calculate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/cardView18"
                app:layout_constraintStart_toStartOf="@+id/cardView18"
                app:layout_constraintTop_toBottomOf="@+id/cardView18" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="91dp"
                android:layout_height="107dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="148dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_shiba"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="192dp"
                android:layout_height="196dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="46dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_speech_bubble__1_"
                tools:ignore="ContentDescription" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintEnd_toEndOf="@+id/imageView6"
                app:layout_constraintStart_toStartOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                app:layout_constraintVertical_bias="0.3">

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/open_sans"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_result" />

                <TextView
                    android:id="@+id/init_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Give me your height and weight and I will give your BMI and some tips too."
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="HardcodedText" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/instruction_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                app:cardCornerRadius="18dp"
                app:cardElevation="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calculate_btn">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ins_img"
                        android:layout_width="81dp"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_diet"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/ins_tv"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:padding="12dp"
                        android:text="@string/you_should_exercise_daily"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/ins_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/ins_img"
                        app:layout_constraintTop_toTopOf="@+id/ins_img" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView16"
                android:layout_width="138dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toTopOf="@+id/cardView17"
                app:layout_constraintEnd_toEndOf="@+id/cardView17">

                <Spinner
                    android:id="@+id/spinner"
                    style="@style/fill_area"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="2dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>